fixed card alignation

--- a/src/styles/AllProjects.scss
+++ b/src/styles/AllProjects.scss
@@ -1,5 +1,9 @@
 @import "Variables";
 #projectContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 400px));
+  justify-content: center;
+  gap: 80px;
   padding: 40px;
   .projectCard {
     display: flex;
