--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -384,6 +384,10 @@
 }
 
 #projectContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 400px));
+  justify-content: center;
+  gap: 80px;
   padding: 40px;
 }
 #projectContainer .projectCard {
